<package>
  <name>kobuki_core</name>
  <version>0.5.1</version>
  <description>
    Non-ROS software for Kobuki, Yujin Robot's mobile research base.
  </description>
  <author email="stonier@yujinrobot.com">Daniel Stonier</author>
  <author email="yhju@yujinrobot.com">Younghun Ju</author>
  <author email="jorge@yujinrobot.com">Jorge Santos Simon</author>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>
  <maintainer email="stonier@yujinrobot.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki_core/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki_core</url>
  <url type="website">http://ros.org/wiki/kobuki_core</url>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>kobuki_auto_docking</run_depend>
  <run_depend>kobuki_bumper2pc</run_depend>
  <run_depend>kobuki_controller_tutorial</run_depend>
  <run_depend>kobuki_description</run_depend> 
  <run_depend>kobuki_driver</run_depend>
  <run_depend>kobuki_ftdi</run_depend>
  <run_depend>kobuki_keyop</run_depend>
  <run_depend>kobuki_node</run_depend>
  <run_depend>kobuki_random_walker</run_depend>
  <run_depend>kobuki_safety_controller</run_depend>
  <run_depend>kobuki_testsuite</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
