<?xml version="1.0"?>
<package format="2">
  <name>kobuki_ftdi</name>
  <version>0.7.8</version>
  <description>
	    Utilities for flashing and enabling Kobuki's USB connection.
	    This package contains tools for flashing the Kobuki's FTDI chip (usually done at the factory).
	    The special firmware for the FTDI chip (USB to serial converter) enables it to appear as
	    /dev/kobuki on the user's PC.
  </description>
  <author>Younghun Ju</author>
  <author>Daniel Stonier</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/yujinrobot/kobuki_core/issues</url>
  <url type="repository">https://github.com/yujinrobot/kobuki_core</url>
  <url type="website">http://ros.org/wiki/kobuki_ftdi</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_command_line</build_depend>
  <build_depend>ftdi-eeprom</build_depend>
  <build_depend>libusb-dev</build_depend>
  <build_depend>libftdi-dev</build_depend>
  <build_depend>pkg-config</build_depend>

  <exec_depend>ecl_command_line</exec_depend>
  <exec_depend>ftdi-eeprom</exec_depend>
  <exec_depend>libusb-dev</exec_depend>
  <exec_depend>libftdi-dev</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
